--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,52 @@
-/*  your css code here. If applicable */
+/* Page background using :root */
+:root {
+  background-color: rgb(135, 206, 235);
+  font-family: Arial, sans-serif;
+}
+
+/* Paragraph styling */
+article p:first-child {
+  background-color: black;
+  color: white;
+  padding: 3px;
+}
+
+article p:nth-child(2) {
+  color: black;
+}
+
+article p:last-child {
+  color: red;
+}
+
+/* Unordered list styling */
+ul {
+  width: 50%;
+  padding: 0;
+  list-style-type: disc;
+  margin-left: 40px;
+}
+
+/* All list items base style */
+ul li {
+  background-color: gray;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+/* Odd items white background */
+ul li:nth-child(odd) {
+  background-color: white;
+}
+
+/* First and last items larger font size */
+ul li:first-child,
+ul li:last-child {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+/* Third-to-last item pink background */
+ul li:nth-last-child(3) {
+  background-color: pink;
+}
